<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="org.rti.ttfinder.ui.assessment.AssessmentFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_assessment" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="org.rti.ttfinder.ui.utility.UtilityFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_utility" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="org.rti.ttfinder.ui.about.AboutFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_about" />
</navigation>