<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".AssessmentActivity"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="15dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text="@string/link_record"/>
        <Button
            android:id="@+id/btnScanQr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan_qr_code"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:textAllCaps="false"
            android:backgroundTint="@android:color/darker_gray"
            android:layout_gravity="left"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tt_tracker_id_hint"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_ttid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            app:errorEnabled="true">
            <EditText
                android:id="@+id/et_tt_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_id"
                android:inputType="number"
                android:layout_marginTop="10dp"
                android:background="@drawable/rectangle_border"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/cbConsent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="-5dp"
            android:textColor="@color/black"
            android:gravity="left"
            android:textSize="18sp"
            android:paddingLeft="5dp"
            android:text="@string/consents"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text="@string/capture_gps_location"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/capture_gps_hint"/>

        <Button
            android:id="@+id/btnGps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Location"
            android:layout_marginTop="8dp"
            android:backgroundTint="@android:color/darker_gray"
            android:textAllCaps="false"/>

        <LinearLayout
            android:id="@+id/llScreeningQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:orientation="vertical">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/llRightEyeQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:text="@string/tt_right_eye_hint"/>
                <RadioGroup
                    android:id="@+id/rgRightEye"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:id="@+id/rbLeftYes"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:text="Yes"/>
                    <RadioButton
                        android:id="@+id/rbLeftNo"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:text="No"/>
                    <RadioButton
                        android:id="@+id/rbLeftNotDone"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:text="Refused/Not Done/DK"/>
                </RadioGroup>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/llLEftEyeQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:text="@string/tt_left_eye_hint"/>
                <RadioGroup
                    android:id="@+id/rgLeftEye"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:id="@+id/rbRightYes"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:text="Yes"/>
                    <RadioButton
                        android:id="@+id/rbRightNo"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:text="No"/>
                    <RadioButton
                        android:id="@+id/rbRightNotDone"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:text="Refused/Not Done/DK"/>
                </RadioGroup>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text="@string/grade"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:weightSum="1">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.2"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="@string/right_eye"/>
            <Button
                android:id="@+id/btnRightEye"
                android:layout_width="0dp"
                android:layout_weight="0.6"
                android:layout_height="wrap_content"
                android:text="@string/capture_image"
                android:textAllCaps="false"
                android:textSize="12sp"
                android:backgroundTint="@android:color/darker_gray"
                android:layout_gravity="left"/>
            <ImageView
                android:id="@+id/ivRightEyeResult"
                android:layout_width="0dp"
                android:layout_weight="0.2"
                android:layout_height="30dp"
                android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.2"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="@string/left_eye"/>
            <Button
                android:id="@+id/btnLeftEye"
                android:layout_width="0dp"
                android:layout_weight="0.6"
                android:layout_height="wrap_content"
                android:text="@string/capture_image"
                android:textSize="12sp"
                android:backgroundTint="@android:color/darker_gray"
                android:textAllCaps="false"
                android:layout_gravity="left"/>
            <ImageView
                android:id="@+id/ivLeftEyeResult"
                android:layout_width="0dp"
                android:layout_weight="0.2"
                android:layout_height="30dp"
                android:layout_gravity="center"/>
        </LinearLayout>



        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:background="@color/colorPrimary"
            android:layout_marginTop="20dp"
            android:layout_gravity="right"/>


    </LinearLayout>
</ScrollView>