<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.utility.UtilityFragment"
    android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:text="@string/export"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:src="@drawable/export"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/export_image_and_log_files_to_the_device_for_transferring_to_a_computer"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="end">
                <androidx.cardview.widget.CardView
                    android:id="@+id/cvExportLoader"
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    android:visibility="gone"
                    android:backgroundTint="@color/orange">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:paddingHorizontal="8dp">
                        <ProgressBar
                            android:id="@+id/pbExportLoader"
                            style="?android:attr/progressBarStyle"
                            android:progressTint="@color/white"
                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            android:indeterminate="true"
                            android:visibility="visible"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <Button
                    android:id="@+id/btnExport"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/export"
                    android:visibility="visible"
                    android:layout_gravity="end"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/llAutomaticGradingSetting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:text="@string/automatic_grading"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:src="@drawable/automatic"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/when_this_is_enabled_images_are_graded_automatically_after_they_are_captured"/>
            </LinearLayout>
            <Switch
                android:id="@+id/sAutomaticGrading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/llGradeImageSetting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:text="@string/grade_image"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:src="@drawable/grade"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/grade_image_hint"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="end">
                <androidx.cardview.widget.CardView
                    android:id="@+id/cvGradingLoader"
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    android:visibility="gone"
                    android:backgroundTint="@color/orange">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:paddingHorizontal="8dp">
                        <ProgressBar
                            android:id="@+id/loadingSpinner"
                            style="?android:attr/progressBarStyle"
                            android:progressTint="@color/white"
                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            android:indeterminate="true"
                            android:visibility="visible"
                            android:layout_marginRight="8dp"/>
                        <TextView
                            android:id="@+id/tvGradingProgress"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:text="2/7"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <Button
                    android:id="@+id/btnGradeImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/grade_image"
                    android:layout_gravity="end"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/llScreeningQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:text="@string/include_tt_screening_questions"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:src="@drawable/exam"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tt_screening_question"/>
            </LinearLayout>
            <Switch
                android:id="@+id/sScreeningQuestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/llAdjudicationSetting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:text="@string/adjudication"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:src="@drawable/adjudication"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/adjudication_hint"/>
            </LinearLayout>
            <Switch
                android:id="@+id/sAdjudication"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/llDebugSetting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:text="@string/debug"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:src="@drawable/debugging"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/debug_enable_hint"/>
            </LinearLayout>
            <Switch
                android:id="@+id/sDebug"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>